# tracefield-lab

./: .cursorrules  .gitignore  AGENT.md  AI_RESEARCH_ENGINE.md  ARCHITECTURE.md  CLAUDE.md  Caddyfile  IMPROVEMENTS.md  MISSING_IMPLEMENTATION.md  NFR.md  README.md  RUNBOOK.md  build.gradle.kts  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  origin.crt  origin.key  pytest.ini  settings.gradle.kts
cloudflare/: server-wol-wake-agent-worker
compose/: compose.dev.yml  compose.test.yml
deploy/: deploy.env  deploy.env.example  docker-compose.windows.yml  start.ps1  (+1 more)
service/api/: Dockerfile  build.gradle.kts  pyproject.toml
service/api/src/: jobs.py  main.py  schemas.py  storage.py
service/api/src/main/kotlin/com/astroreason/api/: Application.kt
service/api/src/main/kotlin/com/astroreason/api/jobs/: JobQueue.kt
service/api/src/main/kotlin/com/astroreason/api/models/: Models.kt
service/api/src/main/kotlin/com/astroreason/api/stats/: StatsService.kt
service/api/src/main/kotlin/com/astroreason/api/storage/: S3Storage.kt
service/api/src/main/kotlin/com/tracefield/api/: Application.kt
service/api/src/main/kotlin/com/tracefield/api/jobs/: JobQueue.kt
service/api/src/main/kotlin/com/tracefield/api/llm/: LlmClient.kt
service/api/src/main/kotlin/com/tracefield/api/models/: Models.kt
service/api/src/main/kotlin/com/tracefield/api/schema/: DatasetRowParser.kt  SchemaInferrer.kt
service/api/src/main/kotlin/com/tracefield/api/storage/: S3Storage.kt
service/api/src/test/kotlin/com/astroreason/api/stats/: StatsServiceTest.kt
(+197 files in other folders)
